--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
   },
   "homepage": "https://github.com/exponentsoftware/backend-assignments-milind1705#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.0",
+    "passport": "^0.4.1",
     "validator": "^13.6.0"
   }
 }
