--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.0",
     "passport": "^0.4.1",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.6.5",
     "validator": "^13.6.0"
   }
 }
